<resources>
    <string name="app_name">ShoppingBasket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">항목 추가</string>
    <string name="delete_product">항목삭제</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="period">period</string>
    <string name="deleteAll">deleteAll</string>
    <string name="cancle">cancle</string>
    <string name="add">Add</string>
</resources>